Bug 2835 - SCI override to 2nd IOAPIC disables interrupt on 1st IOAPIC
Summary: SCI override to 2nd IOAPIC disables interrupt on 1st IOAPIC
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Config-Interrupts (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Len Brown
URL:
Keywords:
: 2927 (view as bug list)
Depends on:
Blocks:
 
Reported: 2004-06-04 23:50 UTC by Len Brown
Modified: 2004-07-05 21:00 UTC (History)
3 users (show)

See Also:
Kernel Version: 2.4.27
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
2.4 patch (868 bytes, patch)
2004-06-05 00:02 UTC, Len Brown
Details | Diff

Description Len Brown 2004-06-04 23:50:51 UTC
On an Intel SCB2, the ACPI SCI in IOAPIC mode is to IRQ31, 
which turns out to be pin 15 of the 2nd IOAPIC. 
 
But this causes pin15 on the 1st IOAPIC to not get initialized with 
an identify mapping because that code doesn't expect an override 
to be to an IOAPIC other than the 1st.
Comment 1 Len Brown 2004-06-05 00:02:42 UTC
Created attachment 3080 [details]
2.4 patch

This patch checks that (mp_irqs[idx].mpc_dstapic == ioapic)
before accepting that an interrupt source override should
disqualify a legacy identity mapping.  2.6 needs the same.
Comment 2 Dominik Brodowski 2004-06-20 09:39:32 UTC
This patch causes severe problems on at least some x86_64 and i386 systems: the
clock ticks twice as fast -- see, for example, http://lkml.org/lkml/2004/6/20/57
Comment 3 Len Brown 2004-06-21 12:49:05 UTC
bad fix was made into good fix 
 
2.4.27-rc1: 
http://linux.bkbits.net:8080/linux-2.4/gnupatch@40d6d35ddJnSnjsuIq54YJLwar1vhA 
linux-acpi-release-2.6.7 on the way to 2.6.8: 
http://linux-acpi.bkbits.net:8080/linux-acpi-release-2.6.7/gnupatch@40d735136IS3UC6I-LbwG91v0UYtLw 
 
Comment 4 Len Brown 2004-07-05 21:00:32 UTC
*** Bug 2927 has been marked as a duplicate of this bug. ***

Note You need to log in before you can comment on or make changes to this bug.